--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,10 @@ body{
     background: linear-gradient(to bottom, hsl(213, 32%, 23%), hsl(218, 68%, 11%));
     height: 5rem;
     font-size: 3rem;
-    padding: 1.5rem 0 0 6rem;
+    padding: 1.2rem 0 1.2rem 5rem;
     color: white;
     font-weight: bold;
+    align-items: center;
 }
 .header,
 .links{
@@ -66,6 +67,8 @@ body{
     font-size: 1.5rem;
     border-radius: 12px;
     border: 5px solid hsl(244, 87%, 37%);
+    display: inline-block;
+    white-space: nowrap;
 }
 .next-button-container{
     display: flex;
@@ -109,12 +112,17 @@ mark{
   width: 100%;
   margin: 4rem auto;
 }
-
+.image-block p{
+  font-size: 1.2rem;
+  padding: 0;
+  margin: 0;
+}
 .image-wrapper {
   position: relative;
   width: 100%;
   aspect-ratio: 16 / 9;
   font-size: 1vw;
+  border-radius: 15px;
 }
 .image-wrapper img {
   width: 100%;
@@ -155,6 +163,13 @@ mark{
     max-width: 2em;
     max-height: 2em;
   }
+  .header{
+    justify-content: center;
+    padding-left: 0;
+  }
+  .image-block p{
+    font-size: 1rem;
+  }
 }
 @media (max-width: 500px) {
   .image-wrapper {
@@ -170,5 +185,21 @@ mark{
   }
   .links a{
     min-width: 25%;
+  }
+  .content{
+    padding: 5% 10%;
+  }
+  .content p{
+    font-size: 1.3rem;
+  }
+  .content h1{
+    font-size: 2.3rem;
+  }
+  .header{
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .image-block p{
+    font-size: 0.8rem;
   }
 }
